<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/image_yt"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/yt_logo"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/edit_mob_no"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_yt"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_mobile"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_mob_no"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp" />
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_pass"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/red"
        android:text="@string/log_in"
        android:textSize="30sp"
        android:textColor="#FFFFFF"/>
    <TextView
        android:id="@+id/txt_forgot_pswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="20dp"/>
    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/register"
        android:padding="6sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>